# IgakuQA119

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  answer_questions.py  async_answer_questions.py  cleaning_ocr_txt.py  convert_json_to_csv.py  create_correct_answers_csv.py  experiments.yaml  grade_answers.py  json_to_csv_converter.py  llm_solver.py  main.py  pdf2txt.py  process_llm_output.py  pyproject.toml  rerun_skipped.py  run_exp.sh  solve_questions.py  structured_and_solve.py  txt2json.py
docs/: README_20250501_legacy_manual.md
nmle-checker/: package-lock.json  package.json
playgrounds/: tool_calling.ipynb
question/: 119C_json.json  119D_json.json
questions/: 119A_json.json  119B_json.json  119E_json.json  119F_json.json
results/: 119A-gpt4o.csv  119A_CA-DSR1-DQ32B-JP_grading_results.csv  119A_CA-DSR1-DQ32B-JP_wrong_answers.csv  119A_deepseek.csv  119A_gemini-2.5-pro_grading_results.csv  119A_gemini-2.5-pro_wrong_answers.csv  119A_gemma-3_grading_results.csv  119A_gemma-3_wrong_answers.csv  119A_results_20250208_065024.csv  119B-gpt4o.csv  119B_CA-DSR1-DQ32B-JP_grading_results.csv  119B_CA-DSR1-DQ32B-JP_wrong_answers.csv  119B_deepseek.csv  119B_gemini-2.5-pro_grading_results.csv  119B_gemini-2.5-pro_wrong_answers.csv  119B_results_20250208_171005.csv  119C_deepseek.csv  119C_gemini-2.5-pro_grading_results.csv  119C_results_20250208_201203.csv  119D-gpt4o.csv  119D_deepseek.csv  119D_gemini-2.5-pro_grading_results.csv  119D_gemini-2.5-pro_wrong_answers.csv  119D_results_20250209_133558.csv  119E-gpt4o.csv  119E_deepseek.csv  119F_deepseek.csv  (+31 more)
(+63 files in other folders)
