[project]
name = "nmle-rta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "anthropic>=0.43.0",
    "azure-ai-formrecognizer>=3.3.3",
    "openai>=1.59.6",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.5",
    "ruff>=0.9.0",
    "tqdm>=4.67.1",
    "pandas",
    "matplotlib",
    "seaborn",
]
